--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "arbitrationprotocol",
   "version": "1.0.0",
-  "description": "",
+  "description": "BeLayer2 Arbitration Protocol",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "compile": "hardhat compile",
+    "clean": "hardhat clean"
   },
-  "keywords": [],
+  "keywords": [
+    "blockchain",
+    "arbitration",
+    "smart-contracts"
+  ],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0"
+  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.16"
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "chai": "^4.5.0",
+    "hardhat": "^2.22.17"
   }
 }
