--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "hardhat test",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "node": "hardhat node",
-    "deploy:local": "hardhat run scripts/0_deployConfigManager.js --network localhost"
+    "node": "hardhat node"
   },
   "keywords": [
     "blockchain",
@@ -39,8 +38,11 @@
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0"
     "@openzeppelin/hardhat-upgrades": "^3.0.0",
+    "bitcoinjs-lib": "^6.1.7",
     "dotenv": "^16.3.1",
-    "hardhat-deploy": "^0.11.45"
+    "ecpair": "^3.0.0-rc.0",
+    "hardhat-deploy": "^0.11.45",
+    "tiny-secp256k1": "^2.2.3"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0"
