--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,20 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@sentry/react": "^8.45.1",
     "@tanstack/react-query": "^5.62.7",
+    "bignumber.js": "^9.1.2",
+    "class-transformer": "^0.5.1",
     "ethers": "^6.7.1",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "viem": "2.x",
-    "wagmi": "^2.14.1"
+    "wagmi": "^2.14.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
@@ -35,6 +41,7 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
