--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,17 +3,24 @@
     "target": "esnext",
     "module": "esnext",
     "jsx": "react-jsx",
-    "strict": true,
+    "strict": false,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "types": [
+      "vite/client",
+      "vite-plugin-svgr/client"
+    ],
+    "outDir": "dist",
   },
   "include": [
     "src"
