Configure frontend eslint

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "clean": "hardhat clean",
-    "node": "hardhat node"
+    "clean": "hardhat clean"
   },
   "keywords": [
     "blockchain",
@@ -17,8 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0",
-    "hardhat": "^2.19.3"
+    "@openzeppelin/contracts": "^5.1.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -32,6 +30,7 @@
     "@types/mocha": ">=9.1.0",
     "chai": "^4.5.0",
     "ethers": "^6.4.0",
+    "hardhat": "^2.22.17",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
