--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@tanstack/react-query": "^5.62.7",
     "bignumber.js": "^9.1.2",
     "class-transformer": "^0.5.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.2.1",
     "ethers": "^6.7.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
