--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.2.1",
     "ethers": "^6.7.1",
+    "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
