shadcn integration with buttons and dialogs, import ensure wallet component/btc service/evm service from other project, update contracts

--- a/frontend/contracts/interfaces/IDAppRegistry.sol/IDAppRegistry.json
+++ b/frontend/contracts/interfaces/IDAppRegistry.sol/IDAppRegistry.json
@@ -9,6 +9,25 @@
         {
           "indexed": true,
           "internalType": "address",
+          "name": "oldConfigManager",
+          "type": "address"
+        },
+        {
+          "indexed": true,
+          "internalType": "address",
+          "name": "newConfigManager",
+          "type": "address"
+        }
+      ],
+      "name": "ConfigManagerUpdated",
+      "type": "event"
+    },
+    {
+      "anonymous": false,
+      "inputs": [
+        {
+          "indexed": true,
+          "internalType": "address",
           "name": "dapp",
           "type": "address"
         }
