--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,24 @@
     "contracts:build": "rm -rf ./contracts && yarn --cwd .. compile && cp -r ../artifacts/contracts ./contracts"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sentry/react": "^8.45.1",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.62.7",
     "bignumber.js": "^9.1.2",
+    "bip66": "^2.0.0",
     "class-transformer": "^0.5.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.2.1",
     "ethers": "^6.7.1",
+    "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
@@ -28,6 +36,8 @@
     "react-router-dom": "^6.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.14.1",
     "zustand": "^5.0.2"
