subgraph: WIP for dapps, frontend: dapp model, dapp service, ui theming to orange

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,3 @@
 VITE_APP_ENV=development
 VITE_APP_LOCAL_SUBGRAPH_ENDPOINT=http://localhost:8000/subgraphs/name/arbitrators
+VITE_APP_DEFAULT_NETWORK_MODE=mainnet
