--- a/package.json
+++ b/package.json
@@ -16,32 +16,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0",
-    "@openzeppelin/contracts-upgradeable": "^5.1.0"
+    "@nomicfoundation/hardhat-verify": "^2.0.12",
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@openzeppelin/hardhat-upgrades": "^1.17.0",
+    "bitcoinjs-lib": "^5.1.7",
+    "hardhat-deploy": "^0.11.45"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.0.1",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
-    "chai": "^4.5.0",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.4.0",
-    "hardhat": "^2.22.17",
-    "hardhat-deploy": "^0.11.45",
+    "chai": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "hardhat": "^2.22.3",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
-    "ts-node": ">=8.0.0",
-    "typechain": "^8.3.0",
-    "typescript": ">=4.5.0",
-    "bitcoinjs-lib": "^6.1.7",
-    "ecpair": "^3.0.0-rc.0",
-    "tiny-secp256k1": "^2.2.3"
+    "ts-node": "^10.9.2",
+    "typechain": "^8.1.0",
+    "typescript": "^5.4.5"
   }
 }
