--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,7 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "^2.14.1",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
