--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.2.1",
     "ethers": "^6.7.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
