--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,4 @@
 VITE_APP_ENV=development
 VITE_APP_LOCAL_SUBGRAPH_ENDPOINT=http://localhost:8000/subgraphs/name/arbitrators
+VITE_APP_NETWORK_ENV=production
 VITE_APP_DEFAULT_NETWORK_MODE=mainnet
