--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@sentry/react": "^8.45.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.62.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "bignumber.js": "^9.1.2",
     "bip66": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -46,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.15.0",
+    "react-use": "^17.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tailwind-merge": "^2.5.5",
