--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -62,7 +62,7 @@ dataSources:
         - name: TransactionManager
           file: ./src/abis/TransactionManager.json
       eventHandlers:
-        - event: ArbitrationRequested(indexed address,indexed bytes32)
+        - event: ArbitrationRequested(indexed address,indexed bytes32,bytes)
           handler: handleArbitrationRequested
         - event: ArbitrationSubmitted(indexed address,indexed bytes32)
           handler: handleArbitrationSubmitted
@@ -71,7 +71,7 @@ dataSources:
         - event: TransactionCompleted(indexed address,indexed bytes32)
           handler: handleTransactionCompleted
         - event: TransactionRegistered(indexed bytes32,indexed address,indexed
-            address,uint256)
+            address,uint256,uint256)
           handler: handleTransactionRegistered
   - name: CompensationManager
     kind: ethereum/contract
