--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "bignumber.js": "^9.1.2",
     "bip66": "^2.0.0",
+    "bitcoinjs-lib": "^6.1.7",
     "class-transformer": "^0.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -70,7 +71,7 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
+    "vite": "^6.0.7",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svgr": "^4.3.0"
   }
