--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.62.7",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.9",
     "bignumber.js": "^9.1.2",
     "bip66": "^2.0.0",
     "bitcoinjs-lib": "^6.1.7",
