DepositFeeTransfer event in subgraph, show arbiter reward on arbiter dashboard

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -81,6 +81,9 @@ dataSources:
         - event: TransactionRegistered(indexed bytes32,indexed address,indexed
             address,uint256,uint256,address)
           handler: handleTransactionRegistered
+        - event: DepositFeeTransfer(indexed bytes32,indexed
+            address,uint256,uint256,uint256)
+          handler: handleDepositFeeTransfer
   - name: CompensationManager
     kind: ethereum/contract
     network: esc-staging
