backend: register arbiter, verify signature, save email address - frontend: notification settings dialog, save email

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,8 +11,10 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "strict": false,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
