--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,2 +1,3 @@
 SERVER_URL="http://localhost:3303"
-DATABASE_URL="postgresql://root:123@127.0.0.1:5445/meetings?schema=public"
+DATABASE_URL="postgresql://root:123@127.0.0.1:5445/arbiterbackend?schema=public"
+SUBGRAPH_ENDPOINT="https://graph.bel2.org/subgraphs/name/arbitrators-prod"
