--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,18 @@
     "@nestjs/serve-static": "^5.0.1",
     "@prisma/client": "^6.2.1",
     "@zohocrm/nodejs-sdk-2.0": "^6.1.0",
+    "class-transformer": "^0.5.1",
     "deep-email-validator": "^0.1.21",
+    "ethers": "^6.13.5",
     "html-to-text": "^9.0.5",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "postmark": "^4.0.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sib-api-v3-typescript": "^2.2.2",
-    "string-placeholder": "^1.0.2"
+    "string-placeholder": "^1.0.2",
+    "viem": "^2.22.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
