Arbitration emailing backend service completed, with frontend dashboard settings.

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,3 +1,12 @@
 SERVER_URL="http://localhost:3303"
 DATABASE_URL="postgresql://root:123@127.0.0.1:5445/arbiterbackend?schema=public"
 SUBGRAPH_ENDPOINT="https://graph.bel2.org/subgraphs/name/arbitrators-prod"
+
+# Emailing
+EMAIL_PROVIDER="zoho" # Must match a SmtpService enum value from emailing.service.ts
+EMAIL_SENDER_NAME="BeL2 Arbiter Backend"
+EMAIL_SENDER_ADDRESS="noreply@belayer2.org"
+
+# Emailing - Zoho service 
+ZOHO_USERNAME="noreply@belayer2.org"
+ZOHO_PASSWORD="password-here"
