--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.1",
     "@prisma/client": "^6.2.1",
-    "@zohocrm/nodejs-sdk-2.0": "^6.1.0",
+    "@zohocrm/typescript-sdk-7.0": "^2.0.0",
     "class-transformer": "^0.5.1",
     "deep-email-validator": "^0.1.21",
     "ethers": "^6.13.5",
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "postmark": "^4.0.5",
+    "radash": "^12.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sib-api-v3-typescript": "^2.2.2",
