Fixed VITE_APP_ARBITER_BACKEND_ENDPOINT in env sample

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -2,4 +2,4 @@ VITE_APP_ENV=development
 VITE_APP_LOCAL_SUBGRAPH_ENDPOINT=http://localhost:8000/subgraphs/name/arbitrators
 VITE_APP_NETWORK_ENV=production
 VITE_APP_DEFAULT_NETWORK_MODE=mainnet
-VITE_APP_ARBITER_BACKEND_ENDPOINT=https://arbiter-backend.bel2.org
+VITE_APP_ARBITER_BACKEND_ENDPOINT=https://arbiter-notification-service.bel2.org
